--- a/tasks/rhel5.yml
+++ b/tasks/rhel5.yml
@@ -1,7 +1,7 @@
 ---
 ### RHEL 5.0 IDE
 - name: RHEL 5.0 BIOS IDE
-  shell: "fast-vm import_image rhel-5.0-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.0-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.0-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.0-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.0-ide"
   tags:
@@ -10,7 +10,7 @@
 
 ### RHEL 5.0
 - name: RHEL 5.0 BIOS
-  shell: "fast-vm import_image rhel-5.0 {{ rhel_image_url_base }}/generated/6g__rhel-5.0-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.0 {{ rhel_image_url_base }}/generated/6g__rhel-5.0-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.0"
   tags:
@@ -19,7 +19,7 @@
 
 ### RHEL 5.1 IDE
 - name: RHEL 5.1 BIOS IDE
-  shell: "fast-vm import_image rhel-5.1-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.1-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.1-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.1-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.1-ide"
   tags:
@@ -28,7 +28,7 @@
 
 ### RHEL 5.1
 - name: RHEL 5.1 BIOS
-  shell: "fast-vm import_image rhel-5.1 {{ rhel_image_url_base }}/generated/6g__rhel-5.1-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.1 {{ rhel_image_url_base }}/generated/6g__rhel-5.1-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.1"
   tags:
@@ -37,7 +37,7 @@
 
 ### RHEL 5.2 IDE
 - name: RHEL 5.2 BIOS IDE
-  shell: "fast-vm import_image rhel-5.2-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.2-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.2-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.2-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.2-ide"
   tags:
@@ -46,7 +46,7 @@
 
 ### RHEL 5.2
 - name: RHEL 5.2 BIOS
-  shell: "fast-vm import_image rhel-5.2 {{ rhel_image_url_base }}/generated/6g__rhel-5.2-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.2 {{ rhel_image_url_base }}/generated/6g__rhel-5.2-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.2"
   tags:
@@ -55,7 +55,7 @@
 
 ### RHEL 5.3 IDE
 - name: RHEL 5.3 BIOS IDE
-  shell: "fast-vm import_image rhel-5.3-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.3-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.3-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.3-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.3-ide"
   tags:
@@ -64,7 +64,7 @@
 
 ### RHEL 5.3
 - name: RHEL 5.3 BIOS
-  shell: "fast-vm import_image rhel-5.3 {{ rhel_image_url_base }}/generated/6g__rhel-5.3-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.3 {{ rhel_image_url_base }}/generated/6g__rhel-5.3-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.3"
   tags:
@@ -73,7 +73,7 @@
 
 ### RHEL 5.4 IDE
 - name: RHEL 5.4 BIOS IDE
-  shell: "fast-vm import_image rhel-5.4-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.4-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.4-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.4-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.4-ide"
   tags:
@@ -82,7 +82,7 @@
 
 ### RHEL 5.4
 - name: RHEL 5.4 BIOS
-  shell: "fast-vm import_image rhel-5.4 {{ rhel_image_url_base }}/generated/6g__rhel-5.4-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.4 {{ rhel_image_url_base }}/generated/6g__rhel-5.4-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.4"
   tags:
@@ -91,7 +91,7 @@
 
 ### RHEL 5.5 IDE
 - name: RHEL 5.5 BIOS IDE
-  shell: "fast-vm import_image rhel-5.5-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.5-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.5-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.5-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.5-ide"
   tags:
@@ -100,7 +100,7 @@
 
 ### RHEL 5.5
 - name: RHEL 5.5 BIOS
-  shell: "fast-vm import_image rhel-5.5 {{ rhel_image_url_base }}/generated/6g__rhel-5.5-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.5 {{ rhel_image_url_base }}/generated/6g__rhel-5.5-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.5"
   tags:
@@ -109,7 +109,7 @@
 
 ### RHEL 5.6 IDE
 - name: RHEL 5.6 BIOS IDE
-  shell: "fast-vm import_image rhel-5.6-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.6-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.6-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.6-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.6-ide"
   tags:
@@ -121,7 +121,7 @@
 
 ### RHEL 5.7 IDE
 - name: RHEL 5.7 BIOS IDE
-  shell: "fast-vm import_image rhel-5.7-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.7-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.7-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.7-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.7-ide"
   tags:
@@ -130,7 +130,7 @@
 
 ### RHEL 5.7
 - name: RHEL 5.7 BIOS
-  shell: "fast-vm import_image rhel-5.7 {{ rhel_image_url_base }}/generated/6g__rhel-5.7-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.7 {{ rhel_image_url_base }}/generated/6g__rhel-5.7-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.7"
   tags:
@@ -139,7 +139,7 @@
 
 ### RHEL 5.8 IDE
 - name: RHEL 5.8 BIOS IDE
-  shell: "fast-vm import_image rhel-5.8-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.8-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.8-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.8-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.8-ide"
   tags:
@@ -148,7 +148,7 @@
 
 ### RHEL 5.8
 - name: RHEL 5.8 BIOS
-  shell: "fast-vm import_image rhel-5.8 {{ rhel_image_url_base }}/generated/6g__rhel-5.8-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.8 {{ rhel_image_url_base }}/generated/6g__rhel-5.8-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.8"
   tags:
@@ -157,7 +157,7 @@
 
 ### RHEL 5.9 IDE
 - name: RHEL 5.9 BIOS IDE
-  shell: "fast-vm import_image rhel-5.9-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.9-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.9-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.9-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.9-ide"
   tags:
@@ -166,7 +166,7 @@
 
 ### RHEL 5.9
 - name: RHEL 5.9 BIOS
-  shell: "fast-vm import_image rhel-5.9 {{ rhel_image_url_base }}/generated/6g__rhel-5.9-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.9 {{ rhel_image_url_base }}/generated/6g__rhel-5.9-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.9"
   tags:
@@ -175,7 +175,7 @@
 
 ### RHEL 5.10 IDE
 - name: RHEL 5.10 BIOS IDE
-  shell: "fast-vm import_image rhel-5.10-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.10-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.10-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.10-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.10-ide"
   tags:
@@ -184,7 +184,7 @@
 
 ### RHEL 5.10
 - name: RHEL 5.10 BIOS
-  shell: "fast-vm import_image rhel-5.10 {{ rhel_image_url_base }}/generated/6g__rhel-5.10-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.10 {{ rhel_image_url_base }}/generated/6g__rhel-5.10-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.10"
   tags:
@@ -193,7 +193,7 @@
 
 ### RHEL 5.11 IDE
 - name: RHEL 5.11 BIOS IDE
-  shell: "fast-vm import_image rhel-5.11-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.11-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.11-ide {{ rhel_image_url_base }}/generated/6g__rhel-5.11-ide.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.11.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.11-ide"
   tags:
@@ -202,7 +202,7 @@
 
 ### RHEL 5.11
 - name: RHEL 5.11 BIOS
-  shell: "fast-vm import_image rhel-5.11 {{ rhel_image_url_base }}/generated/6g__rhel-5.11-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
+  command: "fast-vm import_image rhel-5.11 {{ rhel_image_url_base }}/generated/6g__rhel-5.11-lsisas1078.img.xz {{ xml_url_base }}/rhel/xml/rhel-5.0-5.5,5.7-5.11-lsisas1078.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-5-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-5.11"
   tags:
