--- a/tasks/rhel8.yml
+++ b/tasks/rhel8.yml
@@ -15,7 +15,7 @@
 
 ### RHEL 8.0 Beta
 - name: RHEL 8.0 BIOS
-  shell: "fast-vm import_image rhel-8.0-beta {{ rhel_image_url_base }}/generated/6g__rhel-8.0-beta.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-8-hacks.sh"
+  command: "fast-vm import_image rhel-8.0-beta {{ rhel_image_url_base }}/generated/6g__rhel-8.0-beta.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-8-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-8.0-beta"
   tags:
@@ -23,7 +23,7 @@
     - rhel8_0_beta
 
 - name: RHEL 8.0 UEFI
-  shell: "fast-vm import_image rhel-8.0-beta-uefi {{ rhel_image_url_base }}/generated/6g__rhel-8.0-uefi-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-8-hacks-uefi.sh"
+  command: "fast-vm import_image rhel-8.0-beta-uefi {{ rhel_image_url_base }}/generated/6g__rhel-8.0-uefi-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-8-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-8.0-beta-uefi"
   tags:
